--- a/Pages/AddSupplier.cshtml
+++ b/Pages/AddSupplier.cshtml
@@ -110,6 +110,13 @@
                                 </select>
                             </div>
 
+                            <div class="mb-4">
+                                <label for="ExtensionNumber">@Model.lblExtensionNumber</label>
+                                <input type="number" class="form-control" id="ExtensionNumber" name="ExtensionNumber"
+                                        />
+
+                            </div>
+
 
                             <div class="mb-4">
 
