--- a/Pages/EditSupplier.cshtml
+++ b/Pages/EditSupplier.cshtml
@@ -109,6 +109,13 @@
                             </div>
 
                             <div class="mb-4">
+                                <label for="ExtensionNumber">@Model.lblExtensionNumber</label>
+                                <input type="number" class="form-control" id="ExtensionNumber" value="@Model.ExtensionNumber" name="ExtensionNumber"
+                                        />
+
+                            </div>
+
+                            <div class="mb-4">
 
                                 <div class="d-flex mb-2 mb-md-0" style="gap: 10px">
                                     <a href="ManageSupplier"
