--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -191,6 +191,12 @@
                                                 }
                                                 
                                             }
+                                            else if(inbox.Type == "Assign Supervisor")
+                                            {
+                                                <button class="btn btn-info btn-sm p-1" data-toggle="modal" data-target="#specifyRecipient" onclick="setAcceptReportId(@inbox.MaterialRequestId, @inbox.Id)">
+                                                      Assign Supervisor
+                                                </button>
+                                            }
                                             else if(inbox.Type == "Accepted")
                                             {
                                                 <span class="bg-success p-2 rounded text-white">Accepted</span>
