--- a/Pages/Rep_UserActivity.cshtml
+++ b/Pages/Rep_UserActivity.cshtml
@@ -32,7 +32,7 @@
             XLSX.writeFile(wb, "UserActivityReport.xlsx");
         });
     </script>
-    
+
 }
 
 @{
@@ -59,23 +59,23 @@
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
         <div class="d-flex  flex-direcion-column flex-wrap flex-md-nowrap align-items-center btn-toolbar mb-2 mb-md-0">
-            @* <a href="Rep_MaterialsReceived"
-                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblMaterialsReceived</a>
+            <a href="Rep_MaterialsReceived"
+               class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblMaterialsReceived</a>
 
-            <a href="Rep_Distribution" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2"
-                 >@Model.lblDistributedMaterials</a>
-            <a href="Rep_Inventory" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2"
-                 >@Model.lblInventory</a>
-            <a href="Rep_HazardMaterial" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2"
-                 >@Model.lblHazardousMaterials</a> *@
-            <a href="Rep_UserActivity"
-                class="btn btn-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserActivity</a>
+            <a href="Rep_Distribution" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblDistributedMaterials</a>
+            <a href="Rep_Inventory" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblInventory</a>
+            <a href="Rep_HazardMaterial" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblHazardousMaterials</a>
+            <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblDamagedItems</a>
+            @if (Model.CanManageUsers)
+            {
+                <a href="Rep_UserActivity"
+                   class="btn btn-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserActivity</a>
 
-            @* <a href="Rep_DamagedItems" class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2"
-                >@Model.lblDamagedItems</a> *@
-            <a href="Rep_UserReport"
-                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserReport</a>
 
+
+                <a href="Rep_UserReport"
+                   class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblUserReport</a>
+            }
         </div>
     </div>
     <div class="table-settings mt-4 mb-4">
@@ -84,14 +84,14 @@
                 <div class="input-group me-2 me-lg-3 fmxw-400">
                     <span class="input-group-text">
                         <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
-                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd"
-                                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                                clip-rule="evenodd"></path>
+                                  d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                                  clip-rule="evenodd"></path>
                         </svg>
                     </span>
                     <input type="text" name="UserName" class="form-control" placeholder="@Model.lblUserName"
-                        value="@Model.UserName">
+                           value="@Model.UserName">
                 </div>
             </div>
             <div class="col  col-lg-2 ">
@@ -100,9 +100,9 @@
                         @Model.lblFromDate
                     </span>
 
-                    
+
                     <input asp-for="FromDate" class="form-control" type="date" name="FromDate"
-                value="@Model.FromDate?.ToString("yyyy-MM-dd")" />
+                           value="@Model.FromDate?.ToString("yyyy-MM-dd")" />
 
                 </div>
             </div>
@@ -112,9 +112,9 @@
                         @Model.lblToDate
                     </span>
 
-                    
-            <input asp-for="ToDate" type="date" class="form-control" name="ToDate"
-                value="@Model.ToDate?.ToString("yyyy-MM-dd")" />
+
+                    <input asp-for="ToDate" type="date" class="form-control" name="ToDate"
+                           value="@Model.ToDate?.ToString("yyyy-MM-dd")" />
 
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 <button id="exportExcel" class="btn btn-success">@Model.lblExport</button>
                 <button id="printBtn" class="btn btn-primary">@Model.lblPrint</button>
             </div>
-            
+
         </form>
     </div>
 
@@ -145,7 +145,7 @@
 
                             <li class="page-item">
                                 <a class="page-link"
-                                    href="?page=@(Model.CurrentPage - 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&laquo;</a>
+                                   href="?page=@(Model.CurrentPage - 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&laquo;</a>
                             </li>
                         }
 
@@ -156,7 +156,7 @@
                             {
                                 <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
                                     <a class="page-link"
-                                        href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                                       href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
                                 </li>
                             }
                         }
@@ -167,7 +167,7 @@
                             {
                                 <li class="page-item">
                                     <a class="page-link"
-                                        href="?page=1&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">1</a>
+                                       href="?page=1&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">1</a>
                                 </li>
                                 <li class="page-item disabled">
                                     <span class="page-link">...</span>
@@ -179,7 +179,7 @@
                             {
                                 <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
                                     <a class="page-link"
-                                        href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                                       href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
                                 </li>
                             }
 
@@ -196,7 +196,7 @@
                             {
                                 <li class="page-item">
                                     <a class="page-link"
-                                        href="?page=@Model.TotalPages&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@Model.TotalPages</a>
+                                       href="?page=@Model.TotalPages&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@Model.TotalPages</a>
                                 </li>
                             }
                         }
@@ -206,7 +206,7 @@
                         {
                             <li class="page-item">
                                 <a class="page-link"
-                                    href="?page=@(Model.CurrentPage + 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&raquo;</a>
+                                   href="?page=@(Model.CurrentPage + 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&raquo;</a>
                             </li>
 
                         }
@@ -219,7 +219,7 @@
 
     @* <input type="hidden" id="currentPage" value="1" /> *@
 
-    
+
 
     <div class="card border-0 shadow mb-4">
         <div class="card-body">
@@ -264,7 +264,7 @@
 
                     <li class="page-item">
                         <a class="page-link"
-                            href="?page=@(Model.CurrentPage - 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&laquo;</a>
+                           href="?page=@(Model.CurrentPage - 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&laquo;</a>
                     </li>
                 }
 
@@ -275,7 +275,7 @@
                     {
                         <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
                             <a class="page-link"
-                                href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                               href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
                         </li>
                     }
                 }
@@ -286,7 +286,7 @@
                     {
                         <li class="page-item">
                             <a class="page-link"
-                                href="?page=1&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">1</a>
+                               href="?page=1&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">1</a>
                         </li>
                         <li class="page-item disabled">
                             <span class="page-link">...</span>
@@ -298,7 +298,7 @@
                     {
                         <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
                             <a class="page-link"
-                                href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                               href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
                         </li>
                     }
 
@@ -315,7 +315,7 @@
                     {
                         <li class="page-item">
                             <a class="page-link"
-                                href="?page=@Model.TotalPages&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@Model.TotalPages</a>
+                               href="?page=@Model.TotalPages&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@Model.TotalPages</a>
                         </li>
                     }
                 }
@@ -325,7 +325,7 @@
                 {
                     <li class="page-item">
                         <a class="page-link"
-                            href="?page=@(Model.CurrentPage + 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&raquo;</a>
+                           href="?page=@(Model.CurrentPage + 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&raquo;</a>
                     </li>
 
                 }
